--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ ga_domain: auto
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "交流、共享、进步"
+sidebar-about-description: "中科院信息工程研究所<br />信息安全国家重点实验室"
 sidebar-avatar: /img/avatar-g.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
