--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     ChangShihYoung-_-
+weibo_username:     u/1944440585
 #zhihu_username:     huxpro
 github_username:    changshihyoung
 #twitter_username:   huxpro
